assets/sass/protocols/_quiz1.scss
@use '../components/icons';

/* Mooc-grader questionnaire */

/* Questionnaire uses also error-summary-class from "components/error_summary" */

$questionnaire-focus-bg: #bce8f1;

.exercise .aplus-quiz1 {
	.question-area {
		margin-top: 20px;
		margin-bottom: 20px;
	}

	.question-description {
		margin-bottom: 5px;
	}

	.question-feedback {
		margin-top: 5px;
	}

	.question-hint {
		display: block;
		margin-top: 5px;
		margin-bottom: 5px;
		color: #737373;
		font-style: normal;
	}

	.hint-checkbox {
		padding-left: 20px;
	}

	.option-checked {
		font-weight: bold;
	}

	.error-text {
		margin-top: 5px;
		margin-bottom: 5px;
		color: #a94442;
		font-weight: bold;
		margin-bottom: 0px;
	}

	.has-error .radio,
	.has-error .checkbox {
		color: #333;
	}

	.quiz1-icon-correct {
		@include icons.glyphicon;
		color: #5cb85c;

		&:before {
			content: "\e013";
		}
	}

	.quiz1-icon-neutral {
		@include icons.glyphicon;
		color: #f5bc09;

		&:before {
			content:"\e085";
		}
	}

	.quiz1-icon-incorrect {
		@include icons.glyphicon;
		color: #d9534f;

		&:before {
			content: "\e014";
		}
	}

	/* Highlight the selected option with a background rectangle, and enlarge it on click */
	.checkbox,
	.radio {
		label {
			input + span {
				border-radius: 1px;
				margin-left: 5px;
			}

			input:checked + span {
				background-color: $questionnaire-focus-bg;
				box-shadow: 0 0 0 3px $questionnaire-focus-bg;
				font-weight: bold;
			}

			&:active input + span {
				background-color: $questionnaire-focus-bg;
				box-shadow: 0 0 0 6px $questionnaire-focus-bg;
				font-weight: bold;
			}
		}
	}
}

